[gd_scene load_steps=11 format=3 uid="uid://dpdsh18u6mbnt"]

[ext_resource type="Script" path="res://core/ui.gd" id="4"]
[ext_resource type="Script" path="res://core/connect_dialog.gd" id="5"]
[ext_resource type="Script" path="res://core/network_manager.gd" id="6"]
[ext_resource type="Script" path="res://core/enet_transport.gd" id="7"]
[ext_resource type="PackedScene" uid="uid://du621tdl15o4v" path="res://core/new_room.tscn" id="8_nlpex"]
[ext_resource type="Texture2D" uid="uid://0yo2od878bfq" path="res://assets/textures/backdrop.png" id="10"]
[ext_resource type="PackedScene" uid="uid://yy6p84r16yur" path="res://core/connect.tscn" id="10_cj05d"]
[ext_resource type="PackedScene" path="res://core/settings_dialog.tscn" id="11"]
[ext_resource type="PackedScene" uid="uid://bnaheix8jti6" path="res://core/world.tscn" id="12"]
[ext_resource type="Script" path="res://core/main.gd" id="13"]

[node name="Main" type="Node"]
script = ExtResource("13")

[node name="NetworkManager" type="Node" parent="."]
script = ExtResource("6")
world = NodePath("../UI/SubViewportContainer/WorldViewport/World3D")
ui_node = NodePath("../UI")

[node name="ENetTransport" type="Node" parent="NetworkManager"]
script = ExtResource("7")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4")

[node name="SubViewportContainer" type="SubViewportContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="WorldViewport" type="SubViewport" parent="UI/SubViewportContainer"]
handle_input_locally = false
physics_object_picking = true
size = Vector2i(1152, 608)
render_target_update_mode = 4

[node name="World3D" parent="UI/SubViewportContainer/WorldViewport" instance=ExtResource("12")]
main_node_path = NodePath("../../../..")

[node name="Chatbox" type="RichTextLabel" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 14.0
offset_right = -378.0
offset_bottom = -335.0
grow_horizontal = 2
grow_vertical = 2
scroll_following = true

[node name="MainMenu" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10")
ignore_texture_size = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = -176.0
offset_right = 177.0
offset_bottom = -28.0
grow_vertical = 0
alignment = 2

[node name="Button4" type="Button" parent="UI/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
text = "New Game"
flat = true
alignment = 0

[node name="Button1" type="Button" parent="UI/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
text = "Connect"
flat = true
alignment = 0

[node name="Button2" type="Button" parent="UI/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
text = "Settings"
flat = true
alignment = 0

[node name="Button3" type="Button" parent="UI/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
text = "Quit"
flat = true
alignment = 0

[node name="Bottombar" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -46.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="UI/Bottombar"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -115.0
grow_horizontal = 0
grow_vertical = 2
text = "sunaba"

[node name="RoomControls" type="Control" parent="UI/Bottombar"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 381.0
grow_vertical = 2

[node name="ChatEntry" type="LineEdit" parent="UI/Bottombar/RoomControls"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 7.0
offset_top = -16.0
offset_right = 279.0
offset_bottom = 15.0
grow_vertical = 2
placeholder_text = "chatbox"

[node name="NewRoomDialog" type="Window" parent="UI"]
size = Vector2i(435, 289)
current_screen = -2
visible = false
extend_to_title = true
min_size = Vector2i(435, 289)
max_size = Vector2i(435, 289)

[node name="NewRoom" parent="UI/NewRoomDialog" instance=ExtResource("8_nlpex")]

[node name="RoomName" parent="UI/NewRoomDialog/NewRoom" index="0"]
layout_mode = 1
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 31.0

[node name="MapPath" parent="UI/NewRoomDialog/NewRoom" index="1"]
layout_mode = 1

[node name="Button" parent="UI/NewRoomDialog/NewRoom/MapPath" index="0"]
layout_mode = 1

[node name="CreateRoomButton" parent="UI/NewRoomDialog/NewRoom" index="2"]
layout_mode = 1

[node name="FileDialog" type="FileDialog" parent="UI"]
title = "Open a File"
size = Vector2i(601, 455)
min_size = Vector2i(601, 455)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.map")
show_hidden_files = true

[node name="ConnectDialog" type="Window" parent="UI"]
size = Vector2i(410, 287)
current_screen = -2
visible = false
min_size = Vector2i(410, 287)
max_size = Vector2i(410, 287)
script = ExtResource("5")
netman_path = NodePath("../../NetworkManager")

[node name="Connect" parent="UI/ConnectDialog" instance=ExtResource("10_cj05d")]

[node name="SettingsDialog" parent="UI" instance=ExtResource("11")]
visible = false
gui = NodePath("..")

[connection signal="pressed" from="UI/MainMenu/VBoxContainer/Button4" to="UI" method="_on_create_button_pressed"]
[connection signal="pressed" from="UI/MainMenu/VBoxContainer/Button1" to="UI" method="_on_connect_button_pressed"]
[connection signal="pressed" from="UI/MainMenu/VBoxContainer/Button2" to="UI" method="_on_sb_pressed"]
[connection signal="pressed" from="UI/MainMenu/VBoxContainer/Button3" to="." method="quit"]
[connection signal="mouse_entered" from="UI/Bottombar" to="UI/SubViewportContainer/WorldViewport/World3D" method="on_mouse_entered"]
[connection signal="mouse_exited" from="UI/Bottombar" to="UI/SubViewportContainer/WorldViewport/World3D" method="on_mouse_exited"]
[connection signal="text_submitted" from="UI/Bottombar/RoomControls/ChatEntry" to="." method="_on_chat_text_entered"]
[connection signal="mouse_entered" from="UI/NewRoomDialog" to="UI/SubViewportContainer/WorldViewport/World3D" method="on_mouse_entered"]
[connection signal="mouse_exited" from="UI/NewRoomDialog" to="UI/SubViewportContainer/WorldViewport/World3D" method="on_mouse_exited"]
[connection signal="pressed" from="UI/NewRoomDialog/NewRoom/MapPath/Button" to="UI" method="_on_file_button_pressed"]
[connection signal="pressed" from="UI/NewRoomDialog/NewRoom/CreateRoomButton" to="." method="create_room"]
[connection signal="file_selected" from="UI/FileDialog" to="UI" method="_on_file_selected"]
[connection signal="mouse_entered" from="UI/SettingsDialog" to="UI/SubViewportContainer/WorldViewport/World3D" method="on_mouse_entered"]
[connection signal="mouse_exited" from="UI/SettingsDialog" to="UI/SubViewportContainer/WorldViewport/World3D" method="on_mouse_exited"]

[editable path="UI/NewRoomDialog/NewRoom"]
